packages/truffle/test/sources/migrations/error/migrations/9_js_error_async.js
const Example = artifacts.require("Example");

module.exports = async function(deployer, network, accounts) {
  await deployer.deploy(Hello);
};